docs/tests/syntax/good/testfile-lexer_hack-1.cpp
class
S { public: int a; };
