docs/tests/syntax/bad/testfile-lexer_hack-2.cpp

class S { public: int a; };
class S { public: int a; };
